# meal-generator

./: .readthedocs.yaml  README.md  main.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  generator.rst  index.rst  meal.rst  meal_component.rst  nutrient_profile.rst  requirements.txt
src/meal_generator/: generator.py  meal.py  meal_component.py  models.py  nutrient_profile.py  prompts.py  retriever.py
tests/: test_meal.py
