[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "meal-generator"
dynamic = ["version"]
authors = [
  { name="Tom McKenna", email="tom2mckenna@gmail.com" },
]
description = "A Python package to generate detailed meal information from natural language descriptions using Generative AI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "pydantic",
  "google-genai",
  "aiohttp",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/TomMcKenna1/meal-generator"
Issues = "https://github.com/TomMcKenna1/meal-generator/issues"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]
docs = [
    "sphinx",
]

# Version is derived from git tags (vX.Y.Z) at build time via hatch-vcs.
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/meal_generator"]